# qa_guru_3_18_hw

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_demo_web_shop.py  test_regres_in.py
